# Multi-agent-MCP-PDF-Invoice-Data-Extractor

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  noxfile.py  pyproject.toml  requirements.in
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
app/local_extractor/: README.md  local_invoice_app.py  requirements.txt
app/mcp_extractor/: README.md  requirements.txt
app/multi_agent_extractor/: README.md  a2a_client.py  orchestrator_agent_server.py  requirements.txt
app1/: README-app1.md
app2/: README.md  mcp_invoice_app.py  requirements.txt
app3/: README.md  box_mcp_client.py  extraction_agent_server.py  files_agent_server.py  invoice_models.py  llm_extraction.py  requirements.txt
docs/diagrams/: generate_diagrams.py
evals/: README.md  golden_dataset.json  report_eval_results.py  requirements.txt  run_app2_eval.py  run_app3_eval.py  run_mcp_extractor_eval.py  run_multi_agent_eval.py  schema.py  scorers.py  test_scorers.py  tracing.py
